Integrate map library

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@types/react-router-dom": "^5.3.3",
+    "@vis.gl/react-maplibre": "^8.1.0",
     "lucide-react": "^0.552.0",
+    "maplibre-gl": "^5.10.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
