--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@types/react-router-dom": "^5.3.3",
     "@vis.gl/react-maplibre": "^8.1.0",
+    "axios": "^1.13.1",
     "lucide-react": "^0.552.0",
     "maplibre-gl": "^5.10.0",
     "react": "^19.1.1",
